@@ -3,7 +3,7 @@ require 'openssl'
 
 def get_gl_xml()
   open('gl.xml', 'wb') do |file|
-    file << open('https://cvs.khronos.org/svn/repos/ogl/trunk/doc/registry/public/api/gl.xml', :ssl_verify_mode => OpenSSL::SSL::VERIFY_NONE).read
+    file << open('https://raw.githubusercontent.com/KhronosGroup/OpenGL-Registry/master/xml/gl.xml', :ssl_verify_mode => OpenSSL::SSL::VERIFY_NONE).read
   end
 end
 
